--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Copyright Management - Protect Your Channel</title>
+	 <!-- Favicon --> 
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">                    <!-- Dòng 9 -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">  <!-- Dòng 10 -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">  <!-- Dòng 11 -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">  <!-- Dòng 12 -->
+    <meta name="theme-color" content="#ff0000">                                 <!-- Dòng 13 -->
     <style>
         * {
             margin: 0;
